// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user table invite date column test Test date is many days ago 1`] = `
<div
  className="cell"
>
  <span>
    Today
  </span>
</div>
`;

exports[`Site admin user table invite date column test Test date is now 1`] = `
<div
  className="cell"
>
  <time
    dateTime="2020-11-03T20:50:39+00:00"
  >
    November 3, 2020
  </time>
</div>
`;

exports[`Site admin user table invite date column test Test date is yesterday 1`] = `
<div
  className="cell"
>
  <span>
    Today
  </span>
  <span>
    Yesterday
  </span>
</div>
`;
